<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="45sp"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:text="@string/tittle_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/tittle_discount_for_all_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:text="@string/tittle_valid_until_september_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/poster" />

    </LinearLayout>



</androidx.cardview.widget.CardView>